platform/istio/istio.yaml
---
# Istio Installation using Helm
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    name: istio-system

---
# Istio Gateway API GatewayClass
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: istio
spec:
  controllerName: istio.io/gateway-controller
