platform/istio/httproutes.yaml
---
# HTTPRoute for Keycloak
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: keycloak
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-system
      sectionName: https-keycloak
  hostnames:
    - keycloak.maelkloud.com
  rules:
    - backendRefs:
        - name: keycloak-keycloak-keycloakx-http
          port: 80
---
# HTTPRoute for SonarQube
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: sonarqube-route
  namespace: sonarqube
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-system
      sectionName: https-sonarqube
  hostnames:
    - sonarqube.maelkloud.com
  rules:
    - backendRefs:
        - name: sonarqube-sonarqube-sonarqube
          port: 9000
---
# HTTPRoute for Grafana
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: observability
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-system
      sectionName: https-grafana
  hostnames:
    - grafana.maelkloud.com
  rules:
    - backendRefs:
        - name: grafana
          port: 80
---
# HTTPRoute for Prometheus
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: observability
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-system
      sectionName: https-prometheus
  hostnames:
    - prometheus.maelkloud.com
  rules:
    - backendRefs:
        - name: prometheus-server
          port: 80
---
# HTTPRoute for Loki
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: loki-route
  namespace: observability
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-system
      sectionName: https-loki
  hostnames:
    - loki.maelkloud.com
  rules:
    - backendRefs:
        - name: loki
          port: 3100
---
# HTTPRoute for Tempo
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: tempo-route
  namespace: observability
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-system
      sectionName: https-tempo
  hostnames:
    - tempo.maelkloud.com
  rules:
    - backendRefs:
        - name: tempo
          port: 3200
